--- a/projects/components/src/lib/button/kava-button.component.html
+++ b/projects/components/src/lib/button/kava-button.component.html
@@ -1,2 +1,2 @@
-<button [class]="themeService.isDarkTheme() ? 'kava-button-secondary-dark' : 'kava-button'"
+<button class="kava-button-secondary"
         [disabled]="disabled">{{label}}</button>
