--- a/projects/components/src/styles/dark.css
+++ b/projects/components/src/styles/dark.css
@@ -1,44 +1,44 @@
-:root {
+:root [data-theme="dark"] {
   /* Colors Dark */
-  --dark-background-default: #121212;
-  --dark-background-secondary: #41474d;
-  --dark-background-tertiary: #797c80;
-  --dark-background-light: #41474d;
-  --dark-background-disabled: rgba(255, 255, 255, 0.12);
+  --background-default: #121212;
+  --background-secondary: #41474d;
+  --background-tertiary: #797c80;
+  --background-light: #41474d;
+  --background-disabled: rgba(255, 255, 255, 0.12);
 
-  --dark-text-default: #fff;
-  --dark-text-secondary: rgba(255, 255, 255, 0.7);
-  --dark-text-disabled: rgba(255, 255, 255, 0.5);
+  --text-default: #fff;
+  --text-secondary: rgba(255, 255, 255, 0.7);
+  --text-disabled: rgba(255, 255, 255, 0.5);
 
-  --dark-primary-default: #2f56e2;
-  --dark-primary-dark: rgb(32, 60, 158);
-  --dark-primary-light: rgb(88, 119, 231);
-  --dark-primary-contrast-text: #fff;
+  --primary-default: #2f56e2;
+  --primary-dark: rgb(32, 60, 158);
+  --primary-light: rgb(88, 119, 231);
+  --primary-contrast-text: #fff;
 
-  --dark-secondary-default: #e22f56;
-  --dark-secondary-dark: rgb(158, 32, 60);
-  --dark-secondary-light: rgb(231, 88, 119);
-  --dark-secondary-contrast-text: #fff;
+  --secondary-default: #e22f56;
+  --secondary-dark: rgb(158, 32, 60);
+  --secondary-light: rgb(231, 88, 119);
+  --secondary-contrast-text: #fff;
 
-  --dark-error-default: #d32f2f;
-  --dark-error-dark: #c62828;
-  --dark-error-light: #ef5350;
-  --dark-error-contrast-text: rgba(0, 0, 0, 0.87);
+  --error-default: #d32f2f;
+  --error-dark: #c62828;
+  --error-light: #ef5350;
+  --error-contrast-text: rgba(0, 0, 0, 0.87);
 
-  --dark-warning-default: #ed6c02;
-  --dark-warning-dark: #e65100;
-  --dark-warning-light: #ff9800;
-  --dark-warning-contrast-text: rgba(0, 0, 0, 0.87);
+  --warning-default: #ed6c02;
+  --warning-dark: #e65100;
+  --warning-light: #ff9800;
+  --warning-contrast-text: rgba(0, 0, 0, 0.87);
 
-  --dark-info-default: #29b6f6;
-  --dark-info-dark: #0288d1;
-  --dark-info-light: #4fc3f7;
-  --dark-info-contrast-text: rgba(0, 0, 0, 0.87);
+  --info-default: #29b6f6;
+  --info-dark: #0288d1;
+  --info-light: #4fc3f7;
+  --info-contrast-text: rgba(0, 0, 0, 0.87);
 
-  --dark-success-default: #66bb6a;
-  --dark-success-dark: #388e3c;
-  --dark-success-light: #81c784;
-  --dark-success-contrast-text: rgba(0, 0, 0, 0.87);
+  --success-default: #66bb6a;
+  --success-dark: #388e3c;
+  --success-light: #81c784;
+  --success-contrast-text: rgba(0, 0, 0, 0.87);
 
-  --dark-divider: rgba(255, 255, 255, 0.12);
+  --divider: rgba(255, 255, 255, 0.12);
 }
