--- a/projects/components/src/lib/button/kava-button.component.html
+++ b/projects/components/src/lib/button/kava-button.component.html
@@ -1,3 +1,1 @@
-<button class="kava-button"
-        [attr.type]="type"
-        [disabled]="disabled">{{label}}</button>
+<button class="kava-button" [ngClass]="classes()" [disabled]="disabled">{{label}}</button>
